mld6: Properly initialize MLD packet options

After commit 2069e21ad14f we need to set flags to ensure that hop-by-hop
and hop limit options are included.

PR:		290407
Reviewed by:	zlei, markj
MFC after:	3 days
Fixes:		2069e21ad14f ("ip6_output: Reduce cache misses on pktopts")